# buffer-sharing-in-multi-tenant-db

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  conanfile.txt  gen_script.py  requirements.txt  run.sh
data/: brightkite_10_tenants_1.csv  brightkite_4_tenants_1.csv  brightkite_4_tenants_2.csv  brightkite_5_tenants_1.csv  brightkite_5_tenants_2.csv  brightkite_8_tenants_1.csv  citibike_exp_1_case_1_summary.csv  citibike_exp_1_case_2_summary.csv  citibike_exp_1_case_3_summary.csv  citibike_exp_1_case_4_summary.csv  citibike_exp_2_case_1.csv  citibike_exp_2_case_1_summary.csv  citibike_exp_2_case_2.csv  citibike_exp_2_case_2_summary.csv  citibike_exp_2_case_3.csv  citibike_exp_2_case_3_summary.csv  citibike_exp_2_case_4.csv  citibike_exp_2_case_4_summary.csv  citibike_exp_3_case_1.csv  citibike_exp_3_case_1_summary.csv  citibike_exp_3_case_2.csv  citibike_exp_3_case_2_summary.csv  citibike_exp_3_case_3.csv  citibike_exp_3_case_3_summary.csv  citibike_exp_3_case_4.csv  citibike_exp_3_case_4_summary.csv
experiments/: fault_and_hit_ratio_exp.yaml  hit_ratio_per_cache_size_exp.yaml  hit_ratio_per_cache_size_exp_all_priorities_equal.yaml
notes/: Articles.md  Cost function.md  Extras to add.md  Other links.md  To-do.md
src/: CMakeLists.txt  checker.cpp  checker.h  fault_and_hit_ratio_exp.cpp  hit_ratio_per_cache_size_exp.cpp  input_reader.cpp  input_reader.h  main.cpp  scorer.cpp  scorer.h  single_lru_cache.cpp  single_lru_cache.h  tuner.cpp
src/solutions/: _2q_solution.cpp  _2q_solution.h  belady_solution.cpp  belady_solution.h  lfu_policy_1_solution.cpp  lfu_policy_1_solution.h  lfu_policy_2_solution.cpp  lfu_policy_2_solution.h  lirs_solution.cpp  lirs_solution.h  lrfu_solution.cpp  lrfu_solution.h  lru_2_solution.cpp  lru_2_solution.h  lru_policy_1_solution.cpp  lru_policy_1_solution.h  lru_policy_2_solution.cpp  lru_policy_2_solution.h  lru_policy_3_solution.cpp  lru_policy_3_solution.h  mq_solution.cpp  mq_solution.h  naive_lru_solution.cpp  naive_lru_solution.h  solution.h
src/solutions/cache_eviction_algorithms/: _2q.cpp  _2q.h  belady.cpp  belady.h  lfu.cpp  lfu.h  lirs.cpp  lirs.h  lrfu.cpp  lrfu.h  lru.cpp  lru.h  lru_2.cpp  lru_2.h  mq.cpp  mq.h
src/solutions/tenant_selection_policies/: fault_ratio_cache_used_ratio_policy.h  fault_ratio_policy.h  hit_ratio_cache_used_ratio_policy.h
src/types/: page_access.cpp  page_access.cppm  page_access.h  tenant.cpp  tenant.cppm  tenant.h
temp/: Cost.md
(+125 files in other folders)
